+ start const Mesh and MeshProperty
+ implement class to evaluate and validate meshes with corresponding feature classes
+ dialog added to analyze and repair meshes
+ special viewproviders to display defects of meshes
+ delete features from the document
+ bug fixed: remove features to be deleted from the selection
+ bugs fixed in selection node
+ restore original document file name after loading a project file
+ start implementing an Inventor node rendering the mesh structure directly

Version: V0.5B6 Date: Sat Apr 15 18:23:54 2006 +++++++++++++++++++++++++++++++
+ renamed Vector3D to Vector3f indicating the precision of float and Vector3d as double respectively
+ updated the unittests in Test framework using new API
+ Added some experimental properties to mesh viewprovider
+ Allow to build up structured menus from within Python
+ StdWorkbench::setupContextMenu() implemented
+ PropertyStringList added
+ Continued implementation of property editor
+ Nullify reference to deleted object of dependent objects (Document::remObject)
+ Check if the reference is valid in Mesh::Feature::getMesh() and subclasses
+ Several bugs in Raytracing module fixed
+ API changes in DocumentPy:
  - Recompute -> recompute
  - activeFeature -> activeDocument
  - addFeature -> addObject
  - getFeature -> getObject
  - removeFeature -> removeObject
  - listFeatures -> listObjects
  - AddFeature removed
  - GetFeature removed
  - GetActiveFeature -> getActiveObject
+ API changes in Property
  - Save(Writer&) -> Save(Writer) const
+ API changes in ViewProviderDocumentObject
  - attach(App::AbstractFeature*) -> attach(App::DocumentObject*)
+ Applied patch 1470733, SetOperation patch
+ Applied patch 1470737, new module tritritest
+ Fixed bug in ViewProviderDocumentObject::ViewProviderDocumentObject(): pcPointStyle->ref()
+ Check for scheme version when loading a project file and handle the reading procedure differently
+ RFE 1470745 implemented (material mode: Open Edges)